updated to include silos

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	<!-- CSS
   ================================================== -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
-	<link rel="stylesheet" href="stylesheets/base.css">
-	<link rel="stylesheet" href="stylesheets/skeleton.css">
-	<link rel="stylesheet" href="stylesheets/layout.css">
+	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -47,10 +47,10 @@
 
 	<div class="menu">
 
-			<a class="active" href="index.html#portie">Portfolio</a>
-			<a class="active" href="workshops.php">Workshops</a>
+			<a class="active" href="index.html#portie">Works</a>
 			<a href="http://radarboy.com/george/george_galanakis_resume%202017.pdf">Resume</a>
 			<a href="awards.php">Awards</a>
+			<a class="active" href="workshops.php">Workshops</a>
 
 	</div>
 
@@ -60,11 +60,11 @@
 <div class="container">
 
 
-	<div class="sixteen columns add-top add-bottom">
+	<div class="sixteen columns add-bottom">
 
-		<div class="add-top add-bottom">
+		<div class="half-top half-bottom">
 
-			Hi, I'm George Gally, a multi-disciplined media artist, maker and data hacker. An unusual hybrid of creative, at the convergence of art copy, code, and innovation. I'm into minimalism, data, computer vision and augumented architecture. I spend a lot of time researching and playing with technology. I also hold workshops around the world on Creative Coding. Javascript is my weapon of choice.<br><br>
+			Hi, I'm George Gally, a multi-disciplined media artist, maker and data hacker. A hybrid  creative, at the convergence of art copy, code, and innovation. I'm into minimalism, data, computer vision and augumented architecture. I am constantly learning and spend a lot of time researching and playing with new technology and attending conferences, workshops and resedencies whenever I can. I also hold workshops around the world on Creative Coding. Javascript is my weapon of choice.
 
 
 		</div>
@@ -76,15 +76,12 @@
 
 <!-- SEASILO -->
 <a id="seasilo"></a>
-<div class="sixteen columns  add-top">
+<div class="sixteen columns">
 
 	<div class="big_pic_holder" style="padding-top: 0px; width: 100%; text-align: center; background: #000;">
 
 			<p>
-				<a href="seasilo.php">
-					<img src="images/seasilos.jpg">
-				</a>
-
+				<a href="seasilo.php"><img src="images/seasilos.jpg"></a>
 			</p>
 
 		</div>
@@ -93,14 +90,13 @@
 
 		<h2><a href="internetix.php">Sea Silo</a></h2>
 
-		<div class="sub">Installation. Augumented Architecture. Data.</div>
+		<h3>Installation. Augumented Architecture. Data.</h3>
 
-			Amsterdam’s identity has always been linked to the sea. And the sea is changing.
-90% everything we own and use, at some point, travels to us by container ship, through a vast network of ocean routes and ports that most of us know almost nothing about. <br>
+			Amsterdam’s identity has always been linked to the sea. And the sea is changing. 90% everything we own and use, at some point, travels to us by container ship, through a vast network of ocean routes and ports that most of us know almost nothing about. <br>
 
-			<a class="add-top" href="seasilo.php">More...</a>
+		<a class="add-top" href="seasilo.php">View More...</a>
 
-		</div>
+	</div>
 
 </div>
 
@@ -129,18 +125,10 @@
 
 		<h2><a href="http://radarboy.com/code365_player">Code365</a></h2>
 
-			<div class="sub">Sound Reactive. Motion Reactive. Generative.</div>
+			<h3>Sound Reactive. Motion Reactive. Generative.</h3>
 
-				I've spend the last year on a personal project called <b>#code365</b> - coding a new visualisation project each and #everyday. Pretty tough while holding down a day job and making time for my significant other. But immensly rewarding and I can definately see how I've grown as a coder and an artist. <br><br>
-
-				The project was born out of me wanting to concentrate more on media art and in order to improve my Javascript skills, having been mainly working in Processing for the last couple of years.<br><br>
-
-				The whole system is running on top of a ported Javascript version of my award winning RBVJ software, which I used to use for VJing and running installations. <br><br>
-
-				Check out my <a href="http://instagram.com/radarboy3000" target="_blank">instagram for more.</a> <br><br>
-				You can also see them live <a href="http://radarboy.com/code365_player">here</a> Press SPACEBAR to go to new visualisation (but warning, there's also a lot of unsorted gunk that may not work or may be ugly). <br>
-				<br><br>
-
+				I've spend the 500+ days on a personal project called <b>#code365</b> - coding a new visualisation project each and #everyday. The project was born out of me wanting to concentrate more on media art and in order to improve my Javascript skills, having been mainly working in Processing for the last couple of years.<br><br>
+				<a class="add-top" href="code365.php">More...</a>
 
 	</div>
 
@@ -148,27 +136,24 @@
 
 <!-- INTERNETIX -->
 <a id="internetix"></a>
-<div class="sixteen columns  add-top">
+<div class="sixteen columns">
 
-	<div class="big_pic_holder" style="padding-top: 70px; width: 100%; text-align: center; background: #000;">
+	<div class="big_pic_holder" style="padding-top: 40px; width: 100%; text-align: center; background: #000;">
 
-			<p>
 				<a href="internetix.php">
 					<img src="images/internetix_peeps.jpg">
 				</a>
 
-			</p>
-
-		</div>
+	</div>
 
 	<div class="text-holder">
 
 		<h2><a href="internetix.php">Internetix</a></h2>
 
-		<div class="sub">Installation. Micro-geolocation. Data.</div>
+		<h3>Installation. Micro-geolocation. Data.</h3>
 
-			Micro-geolocation and large-scale networked installation using motion tracking, wifi sniffing and triangulation to track conference delegates, while hacking the hacking data to find connections between them. Visualising delegate's movement, data and connections as giant artworks.
-			<br>
+				Micro-geolocation and large-scale networked installation using motion tracking, wifi sniffing and triangulation to track conference delegates, while hacking the hacking data to find connections between them. Visualising delegate's movement, data and connections as giant artworks.
+			<br><br>
 			<a class="add-top" href="internetix.php">More...</a>
 
 		</div>
@@ -180,14 +165,11 @@
 
 	<div class="preview_box2">
 
-		<div class="big_pic_holder" style="padding-top: 70px; width: 100%; text-align: center; background: #ebebeb;">
+		<div class="big_pic_holder" style="padding-top: 30px; width: 100%; text-align: center; background: #ebebeb;">
 
-			<p>
 				<a href="earth_plays_the_blues.php">
 					<img src="images/earth_plays_the_blues5.jpg">
 				</a>
-
-			</p>
 
 		</div>
 
@@ -197,13 +179,13 @@
 
 		<h2><a href="earth_plays_the_blues.php">Earth Plays the Blues</a></h2>
 
-			<div class="sub">Visualisation. Generative.</div>
+			<h3>Visualisation. Generative.</h3>
 
-			In synesthesia a place can have a colir, taste or smell. But what would a place sound like? Earth Plays the Blues is a generative soundtrack for random places on the earth. <br>Joint winner of JSConf Web Audio hackerthon.<br><br>
+			In synesthesia a place can have a colir, taste or smell. But what would a place sound like? Earth Plays the Blues is a generative soundtrack for random places on the earth. <br>Joint winner of JSConf Web Audio hackerthon.
 
 			<br><br>
 
-			<a class="add-top" href="earth_plays_the_blues.php">View more</a>
+			<a class="half-top" href="earth_plays_the_blues.php">More...</a>
 
 		</div>
 
@@ -224,7 +206,7 @@
 		<div class="text-holder">
 
 			<h2><a href="dstv.php">DSTV - Oscar Pistorius Trial</a></h2>
-			<div class="sub">Web. Mobile. TV. Print. Data. </div>
+			<h3>Web. Mobile. TV. Print. Data. </h3>
 
 			Second screen experience and jornalist toolkit for the live coverage of the Oscar Pistorius trial for South African TV network, DSTV. <br><br>
 
@@ -236,8 +218,8 @@
 
 
 
-<!-- FIVE STAGES -->
-<div class="sixteen columns add-top">
+<a id="fivestages"></a>
+<div class="sixteen columns">
 
 
 
@@ -255,11 +237,11 @@
 
 			<h2><a href="five_stages.php">The Five Stages</a></h2>
 
-				<div class="sub">Motion and Sound Reactive Installation.</div>
+				<h3>Motion and Sound Reactive Installation.</h3>
 
 			An installation deleloped at my residency at Schmiede, in Austria. An experimental AI generative feedback loop, where the computer controls the room's mood. The visuals mutate the sound and the sound in turn mutates visuals. Representing the five stages of grief, The Five Stages is sometimes calm and contemplative, other times bordering on the edge of chaos.
-
-			<a class="add-top" href="five_stages.php">More...</a>
+			<br><br>
+			<a class="half-top" href="five_stages.php">More...</a>
 
 		</div>
 
@@ -267,9 +249,8 @@
 
 
 
-<!--  GIGHAM -->
 <a id="gigham"></a>
-<div class="sixteen columns add-top ">
+<div class="sixteen columns">
 
 		<div class="preview_box2">
 
@@ -285,16 +266,18 @@
 			<a href="gigham.php">Gigham</a>
 		</h2>
 
-		<div class="sub">Startup. Events. </div>
+		<h3>Startup. Events. </h3>
 
 			Co-founder of Google funded startup, Gigham, a startup that makes it easy to discover, promote and monetize events. Collating 1000s of sources and venues to be the most comprehensve event personalised reccomendation engine, Gigham helped you find what to do, no matter how obsure your interests.
-
-			<a class="add-top" href="gigham.php">More...</a>
+			<br><br>
+			<a class="half-top" href="gigham.php">More...</a>
 
 		</div>
 
 </div>
 
+
+<a id="twittertv"></a>
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -317,7 +300,7 @@
 
 		<h2><a href="../twittertv/" target="_blank">Twitter TV</a></h2>
 
-			<div class="sub">Visualisation. Giphy. Twitter.</div>
+			<h3>Visualisation. Giphy. Twitter.</h3>
 
 			Twitter as TV. Visualizing Twitter with the help of Giphy. Get Tweets on any topic. Change the url hash to anything, and sit back and watch Twitter.<br><br>
 
@@ -332,7 +315,6 @@
 
 
 
-<!--  ROBOMAKER -->
 <a id="robomaker"></a>
 <div class="sixteen columns ">
 
@@ -347,11 +329,11 @@
 			<div class="text-holder">
 
 				<h2><a href="robot.php">Robot Maker</a></h2>
-				<div class="sub">Installation. Creative Technology. </div>
+				<h3>Installation. Creative Technology. </h3>
 
 
 					For Standard Chartered Bank Arts in the Park - their most important community outreach project - we created a fully automated robot builder that enables kids to create and assemble their own original papercraft robots.
-
+					<br><br>
 					<a class="add-top" href="robot.php">More...</a>
 
 			</div>
@@ -359,6 +341,7 @@
 </div>
 
 
+<a id="thisishowiroll"></a>
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -381,7 +364,7 @@
 
 		<h2><a href="../this_is_how_i_roll" target="_blank">This is how I roll</a></h2>
 
-			<div class="sub">Generative. Geolocation. Visualisation. </div>
+			<h3>Generative. Geolocation. Visualisation. </h3>
 
 			Generative sound from a month's worth of my location data.<br><br>
 
@@ -395,6 +378,7 @@
 </div>
 
 
+<a id="morsetweet"></a>
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -409,7 +393,7 @@
 
 		<h2><a href="morsetweet.php">Morsetweet</a></h2>
 
-			<div class="sub">Art. Twitter hack.</div>
+			<h3>Art. Twitter hack.</h3>
 
 			Client: Self <br><br>
 			Tweet in MorseCode. Amaze your friends. Confuse the enemy. <br>
@@ -423,7 +407,6 @@
 </div>
 
 
-<!--  zoo -->
 <a id="zoo"></a>
 <div class="sixteen columns">
 
@@ -438,7 +421,7 @@
 	<div class="text-holder">
 
 		<h2><a href="zoo.php">Digital Zoo</a></h2>
-		<div class="sub">Art Installation. Hardware. Social.</div>
+		<h3>Art Installation. Hardware. Social.</h3>
 
 
 			Instalation at the Edinburgh Festival featuring Africa's Big 5 animals as big grumpy LED tamagochis.<br>
@@ -452,6 +435,7 @@
 </div>
 
 
+<a id="shesaid"></a>
 <div class="sixteen columns ">
 
 		<div class="preview_box2">
@@ -466,7 +450,7 @@
 		<div class="text-holder">
 
 				<h2><a href="shesaid.php">What She Said</a></h2>
-				<div class="sub">Art Installation</div>
+				<h3>Art Installation</h3>
 				Comissioned by Art And Kunst, Berlin
 				<br>
 				<br>
@@ -479,6 +463,8 @@
 
 	</div>
 
+
+<a id="sound"></a>
 	<div class="sixteen columns">
 
 
@@ -493,7 +479,7 @@
 			<div class="text-holder">
 
 				<h2><a href="">Seeing Sound</a></h2>
-				<div class="sub">Installation. Sound Reactive.</div>
+				<h3>Installation. Sound Reactive.</h3>
 				Sound reactive installation exploring minimalism and sound visualisation. <br>
 				Comissioned for Disco Olympics. Berlin, Germany. <br>
 				Concept. Design. Coding.<br><br>
@@ -503,7 +489,6 @@
 	</div>
 
 
-	<!-- broadcast -->
 	<a id="broadcast"></a>
 	<div class="sixteen columns">
 
@@ -519,7 +504,7 @@
 		<div class="text-holder">
 
 			<h2><a href="boradcast.php">Radarboy Broadcast</a></h2>
-			<div class="sub">Website. Animation. Experimental.</div>
+			<h3>Website. Animation. Experimental.</h3>
 
 			A multi-award winning experimetal self-promotion content portal, before content was a thing. Broadcast drew from a huge pool of self-created quirky content, to create daily programming schedules.
 
@@ -531,7 +516,7 @@
 
 
 
-
+<a id="looktothesky"></a>
 <div class="sixteen columns">
 
 
@@ -546,20 +531,21 @@
 		<div class="text-holder">
 
 				<h2><a href="looktosky.php">Look to the Sky</a></h2>
-				<div class="sub">Installation. Electronics. EL Wire.</div>
+				<h3>Installation. Electronics. EL Wire.</h3>
 				Comissioned by Mind The Box, Berlin, and Process 4 Labs, Milan.
 				<br><br>
 
 				A light Installation, inspired by the minimalist masters, at Italy's most important design show - Salone di Mobile, Milan Italy.
 				<b>Concept. Code. </b><br>
 
-				<a class="add-top" href="looktosky.php">View more</a>
+				<a class="add-top" href="looktosky.php">More...</a>
 
 		</div>
 
 </div>
 
 
+<a id="capsule"></a>
 <div class="sixteen columns ">
 
 		<div class="preview_box2">
@@ -573,18 +559,18 @@
 		<div class="text-holder">
 
 			<h2><a href="capsule.php">Capsule</a></h2>
-			<div class="sub">Digital. Product. Magazine. Giveaway</div>
+			<h3>Digital. Product. Magazine. Giveaway</h3>
 			Mult-award winning digital magazine, that fitted an amazing amount of content, animation and sound onto a 1mb a Floppy Disk.
 			<br><br>
 
 			Client: Self, Radarboy<br><br>
-			<a class="add-top" href="capsule.php">View more</a>
+			<a class="add-top" href="capsule.php">More...</a>
 
 		</div>
 
 </div>
 
-
+<a id="lounge"></a>
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -598,19 +584,20 @@
 	<div class="text-holder">
 
 		<h2><a href="lounge.php">The Knitting Room</a></h2>
-		<div class="sub">Art Installation. Experience. Social.</div>
+		<h3>Art Installation. Experience. Social.</h3>
 
 		Experiential living room TV installation and knitting class. <br><br>
 		Comissioned for Mind the Box, Berlin<br>
 		Concept. Electronics. Coding.<br><br>
 
-		<a class="add-top" href="lounge.php">View more</a>
+		<a class="add-top" href="lounge.php">More...</a>
 
 	</div>
 
 </div>
 
 
+<a id="ocb"></a>
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -626,14 +613,14 @@
 		<h2><a href="ocb.php">Disco Aerobics</a></h2>
 		Motion reactive projections in Historic Cape Town building.
 		<br><br>
-		<a class="add-top" href="ocb.php">View more</a>
+		<a class="add-top" href="ocb.php">More...</a>
 
 	</div>
 
 </div>
 
 
-<div class="sixteen columns">
+<!-- <div class="sixteen columns">
 
 	<div class="preview_box2">
 
@@ -647,11 +634,11 @@
 
 		<h2><a href="blocks.php">Blockface</a></h2>
 		Pixelate yourself.<br><br>
-		<a class="add-top" href="blocks3d.php">View more</a>
+		<a class="add-top" href="blocks3d.php">More...</a>
 
 	</div>
 
-</div>
+</div> -->
 
 <div class="row">
 
@@ -673,7 +660,7 @@
 		<div class="text-holder">
 
 				<h2><a href="thinking.php">Thinking Multimedia</a></h2>
-				<div class="sub">CD Rom. Content.</div>
+				<h3>CD Rom. Content.</h3>
 
 				A heavily award-winning CD Rom that pushed the bounds of what we thought digital could do, while remaining stubbornly tongue-in-cheek.
 				<a class="add-top" href="thinking.php">More...</a>
@@ -681,6 +668,7 @@
 
 		</div>
 
+	<a id="thinking"></a>
 	<a id="cowsite"></a>
 	<div class="eight columns">
 
@@ -697,7 +685,7 @@
 			<div class="text-holder">
 
 				<h2><a href="cowsite.php">Radarboy Cowsite</a></h2>
-				<div class="sub">Websites. Games. Animation</div>
+				<h3>Websites. Games. Animation</h3>
 				Multi-award winning self-promotional site that was voted one of the top 10 flash sites in the world.
 
 				<a class="add-top" href="cowsite.php">More...</a>
@@ -709,7 +697,7 @@
 	</div>
 
 <div class="row">
-
+	<a id="ydetag"></a>
 	<div class="eight columns ">
 
 		<div class="preview_box">
@@ -723,7 +711,7 @@
 		<div class="text-holder">
 
 			<h2><a class="add-top" href="ydetag.php">This Space to Let</a></h2>
-			<div class="sub">Art Installation. Data. </div>
+			<h3>Art Installation. Data. </h3>
 			Collecting alalogue data from the National Gallery to determine where the most valuable spaces to exhibit are. <br><br>
 
 			Comissioned by SoftServe and the National Gallery.<br><br>
@@ -736,7 +724,7 @@
 	<div class="eight columns ">
 
 		<div class="preview_box">
-
+			<a id="reaktiv"></a>
 			<div class="pic_holder">
 				<a href="reaktiv.php"><img src="images/reactiv.jpg"></a>
 			</div>
@@ -749,7 +737,7 @@
 			Motion reactive experimental performance at the Apple store in Ginza, Tokyo.
 			<br><br>
 
-			<div class="sub">Art Installation. Performance. Reactive Video.</div>
+			<h3>Art Installation. Performance. Reactive Video.</h3>
 			Comissioned by Apple Japan.<br>
 			<a class="add-top" href="reaktiv.php">View more</a>
 
@@ -763,7 +751,7 @@
 <div class="row">
 
 	<div class="eight columns ">
-
+		<a id="rbvj"></a>
 		<div class="preview_box">
 
 			<div class="pic_holder">
@@ -783,6 +771,7 @@
 
 	</div>
 
+	<a id="trailer"></a>
 	<div class="eight columns ">
 
 		<div class="preview_box">
@@ -808,7 +797,7 @@
 
 </div>
 
-
+<a id="dancemotion"></a>
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -831,7 +820,7 @@
 
 
 <div class="row">
-
+	<a id="graffiti"></a>
 	<div class="eight columns ">
 
 		<div class="preview_box">
@@ -845,7 +834,7 @@
 		<div class="text-holder">
 
 			<h2><a href="graffiti.php">Graffiti Machine</a></h2>
-			<div class="sub">Concept. Hardware. Electronics. Coding</div><br>
+			<h3>Concept. Hardware. Electronics. Coding</h3><br>
 			Graffiti drawing console and installation for Resfest.<br><br>
 			Comissioned by Resfect and Interactive Africa.
 			<a class="add-top" href="graffiti.php">View more</a><br>
@@ -854,6 +843,7 @@
 
 	</div>
 
+	<a id="nmuf"></a>
 	<div class="eight columns ">
 
 		<div class="preview_box">
@@ -877,6 +867,7 @@
 
 <div class="row">
 
+	<a id="tshirtmaker"></a>
 	<div class="eight columns ">
 
 		<div class="preview_box">
@@ -898,6 +889,7 @@
 
 	</div>
 
+	<a id="saville"></a>
 	<div class="eight columns ">
 
 		<div class="preview_box">
