updated to include silos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 	<div class="sixteen columns add-bottom">
 
-		<div class="half-top half-bottom">
+		<div class="half-top half-bottom quote">
 
 			Hi, I'm George Gally, a multi-disciplined media artist, maker and data hacker. A hybrid  creative, at the convergence of art copy, code, and innovation. I'm into minimalism, data, computer vision and augumented architecture. I am constantly learning and spend a lot of time researching and playing with new technology and attending conferences, workshops and resedencies whenever I can. I also hold workshops around the world on Creative Coding. Javascript is my weapon of choice.
 
@@ -92,9 +92,9 @@
 
 		<h3>Installation. Augumented Architecture. Data.</h3>
 
-			Amsterdam’s identity has always been linked to the sea. And the sea is changing. 90% everything we own and use, at some point, travels to us by container ship, through a vast network of ocean routes and ports that most of us know almost nothing about. <br>
+			Amsterdam’s identity has always been linked to the sea. And the sea is changing. 90% everything we own and use, at some point, travels to us by container ship, through a vast network of ocean routes and ports that most of us know almost nothing about. <br><br>
 
-		<a class="add-top" href="seasilo.php">View More...</a>
+		<a class="add-top" href="seasilo.php">More...</a>
 
 	</div>
 
