updated to include silos

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 	<div class="menu">
 
-			<a class="active" href="index.html#portie">Works</a>
-			<a href="http://radarboy.com/george/george_galanakis_resume%202017.pdf">Resume</a>
-			<a href="awards.php">Awards</a>
-			<a class="active" href="workshops.php">Workshops</a>
+
+		<a href="index.html#seasilo" class="button none"><button> Works </button></a><a href="http://radarboy.com/george/george_galanakis_resume%202017.pdf"><button>Resume</button></a> <a href="awards.php"><button>Awards</button></a><a class="active" href="workshops.php"><button value="works">Workshops</button></a>
+
+
 
 	</div>
 
@@ -141,7 +141,7 @@
 	<div class="big_pic_holder" style="padding-top: 40px; width: 100%; text-align: center; background: #000;">
 
 				<a href="internetix.php">
-					<img src="images/internetix_peeps.jpg">
+					<img src="images/internetix_peeps2.jpg">
 				</a>
 
 	</div>
@@ -902,7 +902,7 @@
 
 		<div class="text-holder">
 
-			<h2><a href="saville.php">Homage to Saville</a></h2>
+			<h2><a href="saville.php">Homage</a></h2>
 			Recreation of Peter Saville's iconic Joy Division album cover.<br><br>
 			<a class="add-top" href="saville.php">View more</a>
 
