index.html to index.php

--- a/commercial.html
+++ b/commercial.html
@@ -46,7 +46,7 @@
 	<div class="menu">
 
 
-		<a href="index.html#seasilo" class="button none"><button> Works</button></a>
+		<a href="index.php#seasilo" class="button none"><button> Works</button></a>
 		<a href="commercial.html" class="button"><button> Commercial</button></a>
 		<a href="http://radarboy.com/george/George_Gally_Resume_2017.pdf"><button>Resume</button></a>
 		<a href="awards.php"><button class="button">Awards</button></a>
