--- a/index (2016:01:13, 12:34 AM).html
+++ b/index (2016:01:13, 12:34 AM).html
@@ -47,7 +47,7 @@
 <div class="menu">
 	<a href="awards.php">Awards.</a><a href="resume.php">Resume.</a><a class="active" href="">Works.</a>
 </div>
-	<div id="Name">George Gally: <a href="index.html">Portfolio</a></div>
+	<div id="Name">George Gally: <a href="index.php">Portfolio</a></div>
 
 </div>
 
